myStyle.css
/* ... */
section.flex-column {
	width: 100%;
	height: 100vh;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
}

.scroll-icon {
	width: 1.7em;
	height: 2.6em;
	border: 2px solid #8C9BAF;
	display: inline-block;
	border-radius: 1em;
	overflow: hidden;
	box-sizing: border-box;
}
	.scroll-icon .scroll-wheel {
		width: .4em;
		height: .4em;
		background-color: #A922A7;
		border-radius: 100%;
		display: inherit;
		animation: scroll_1 2.5s ease-in-out infinite;
	}



@keyframes scroll_1 {
  0%   { transform: translateY(0); opacity: 1; background-color: #197FCD}
  25%  { background-color: #C00897}
  50%  { transform: translateY(0.7em); background-color: #FEB507}
  75%  { background-color: #FEB507}
  100% { transform: translateY(0); opacity: 1; background-color: #197FCD}
}


section.project {
	padding: 0;
	width: 100vw;
	height: 100vh;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	flex-flow: row wrap;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	flex-flow: row wrap;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	background-color: white;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	overflow: hidden;
	position: relative;
}

.hero-overlay {
	width: 100%;
	height: 0;
	position: absolute;
	bottom: 0;
}

.full-prj-img {
	width: 100vw;
	height: 100vh;
	position: absolute;
	top: 0; left: 0;
	background-color: #e0dfdf;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	z-index: 0;
	visibility: hidden;
	transform: translateY(20%);
	transform-origin: top;
}

.project-description {
	width: 50%;
	height: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-flow: column wrap;
	flex-flow: column wrap;
	align-items: flex-start;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	background-color: white;
	z-index: 1000;
}

.prj-des-contents {
	width: 75%;
	height: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	justify-content: center;
	margin: auto 5vw;
}


.project .prj-hero_img {
	width: 50%; height: 100%;
}


/* ----------------------------------- Customised contents ----------------------------------------- */

.in-out-el {
	visibility: hidden;
}


/* ----------------------------------------Intro Section--------------------------------------------- */

.opening_line {
	margin: 10px;
	padding: 10px;
	-ms-flex-item-align: end;
	align-self: flex-end;
	cursor: default;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}

	#intro_text {
		font-size: calc(3em + 6vw);
		line-height: 1em;
		margin-bottom: 0;
	}
	#intro_sub_text {
		font-size: calc(1.5em + 2vw);
		margin-top: 0;
		font-family: 'Lilita One', cursive;
		color: #3B4A65;
	}

#home-CTAarrow {
	margin: 10% 10% 60px 60px;
	-ms-flex-item-align: start;
	align-self: flex-start;
}

#home-intro_2 {
	width: 65%;
	margin: auto;
}


/* ------------------------- */

#smiley-face {
	overflow: visible;
	margin-top: 30px;
}


/* ------------------------------------------ Heineken Intro-------------------------------------------------------- */
#prj-heineken .prj-hero_img {
	background-image: url("./Assets/Heineken_HomeMockup.png");
	background-color: #c2e5cf;
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
}

/* ------------------------------------------ Schecker Intro-------------------------------------------------------- */

#prj-schecker .prj-hero_img {
	background-image: url("./Assets/home-schecker-mockups.png");
	background-color: #E0DFDF;
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
}


/* ------------------------------------------ SA Intro -------------------------------------------------------- */

#prj-sa .prj-hero_img {
	background-image: url("./Assets/SA_HomeMockup.png");
	background-position: center;
	background-repeat: no-repeat;
	background-color: #ecb42a;
	background-size: 100%;
}


/* ------------------------------------------ Bardot Intro -------------------------------------------------------- */

#prj-bardot .prj-hero_img {
	background-image: url("./Assets/Bardot_HomeMockup.png");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
	background-color: #f0f0f0;
}

/* ------------------------------------------ Radio Rentals Intro -------------------------------------------------------- */

#prj-rr .prj-hero_img {
	background-image: url("./Assets/RR_HomeMockup.png");
	background-position: bottom right;
	background-repeat: no-repeat;
	background-size: 100%;
	background-color: black;
}



/* ------------------------------------------ More works & About section -------------------------------------------------------- */

	.big-link {
	font-size: 1.8em;
	letter-spacing: .05em;
	margin: 4% auto;
	position: relative;
	font-weight: 800;
}
	.big-link:after {
		content: "";
		width: 50%;
		height: 2px;
		background-color: #a107f9;
		position: absolute;
		left: 25%;
		transform-origin: center;
		transition: .5s;
	}
		.big-link:hover:after {
			background-color: #ffec21;
			width: 100%;
			height: 2px;
			left: 0;
			border: 0;
		}
/* ... */

